--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html {
 	text-align: center;
 	line-height: 30px;
 	font-size: 40px;
-	color: 000000;
+	color: #000000;
 	margin: auto;
 	margin-top: 20px;
 }
