doctype html added, many fixes

--- a/diagnostics.css
+++ b/diagnostics.css
@@ -66,9 +66,9 @@
 }
 
 .hex-boxtext{
-	background-color:cc3500; 
+	background-color: #cc3500; 
 	line-height:26px;
-	color: 000000;
+	color: #000000;
 }
 
 .hex-image {
