--- a/memory.css
+++ b/memory.css
@@ -33,8 +33,10 @@
 
 .mem-header{
 	color: #000000;
-	font-size: 60;
+	font-size: 60px;
+	height: 40px;
 	border-bottom: solid black 3px;
+	line-height:40px;
 }
 
 .mem-text{
@@ -46,11 +48,12 @@
 }
 
 .mem-close {
-  color: white;
-  float: right;
-  font-size: 64px;
-  font-weight: bold;
-  margin-right: 15px;
+	color: white;
+	float: right;
+	font-size: 64px;
+	font-weight: bold;
+	margin-right: 15px;
+	line-height:40px;
 }
 
 .mem-close:hover,
