--- a/radio.css
+++ b/radio.css
@@ -20,7 +20,7 @@
 
 .freq-side {
 	text-align: center;
-	margin-top: 65px;
+	margin-top: 98px;
 	color: #3f3f3f;
 }
 
@@ -41,7 +41,7 @@
 .radio-master .center{
 	display: flex;
 	flex-wrap: nowrap;
-	background-color: 131313;
+	background-color: #131313;
 }
 
 .radio-master .center .radio-tags {
@@ -87,7 +87,7 @@
 .radio-bottom-title {
 	background-color: #cc3500;
 	line-height: 24px;
-	color: 000000;
+	color: #000000;
 	width: 90%;
 	margin: auto;
 	border-width: 3px;
