external links change color on hover

--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ html {
 	margin-bottom: 0;
 }
 
+.external-link{
+	color: #ffffff;
+}
+.external-link:hover{
+	color: #bbbbbb;
+}
 
 body {
 	background-color: #131313;
