--- a/css/desktopicons.css
+++ b/css/desktopicons.css
@@ -25,6 +25,12 @@
 	display: block;
 	width: 90px;
 	height: 90px;
+
+	image-rendering: crisp-edges;
+    image-rendering: -moz-crisp-edges;          
+    image-rendering: -o-crisp-edges;            
+    image-rendering: -webkit-optimize-contrast; 
+    -ms-interpolation-mode: nearest-neighbor; 
 }
 
 .desktopcontainer .desktopitem .desktoptitle{
