--- a/css/taskbar.css
+++ b/css/taskbar.css
@@ -39,6 +39,12 @@
     position: relative;
     top: 0;
     transition: top ease 0.1s;
+    
+    image-rendering: crisp-edges;
+    image-rendering: -moz-crisp-edges;          
+    image-rendering: -o-crisp-edges;            
+    image-rendering: -webkit-optimize-contrast; 
+    -ms-interpolation-mode: nearest-neighbor; 
 }
 
 .taskbar .flex .tray .icon:hover .iconpicture {
