added theme support
full support isnt quite done yet, still need to add custom sfx and bgm support for the themes
also optimized how the toggle crt option is done

--- a/css/folder.css
+++ b/css/folder.css
@@ -15,7 +15,7 @@
 }
 
 .window .folderContainer .folderitem:hover{
-	background: rgba(70, 70, 130, 0.2);
+	background: var(--folderitem_hover);
 }
 
 .window .folderContainer .folderitem .folderimage{
