--- a/css/desktopicons.css
+++ b/css/desktopicons.css
@@ -18,7 +18,7 @@
 }
 
 .desktopcontainer .desktopitem:hover{
-	background: rgba(70, 70, 130, 0.2);
+	background: var(--desktopitem_hover);
 }
 
 .desktopcontainer .desktopitem .desktopimage{
