--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     overflow: hidden;
     height: 100vh;
     width: 100vw;
-    background-image: url('../images/bliss.jpg');
+    background-image: var(--background);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,7 +45,7 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
-    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.2) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+    background: var(--crtfilter);
     z-index: 2;
     background-size: 100% 4px, 3px 100%;
     pointer-events: none;
@@ -65,20 +65,20 @@ li{
 
 a:link {
     text-decoration: none;
-    color: #4f6fda;
+    color: var(--zeldas);
 }
 
 a:visited {
     text-decoration: none;
-    color: #4f6fda;
+    color: var(--zeldas);
 }
 
 a:hover {
     text-decoration: underline;
-    color: #4f6fda;
+    color: var(--zeldas);
 }
 
 a:active {
     text-decoration: underline;
-    color: #4f6fda;
+    color: var(--zeldas);
 }
